--- a/styleTwo.css
+++ b/styleTwo.css
@@ -24,23 +24,23 @@ nav, ul{
     display: block;
     background: #454aa6;
     width: 115.5em;
-    height: 15em;
+    height: 10em;
 
 }
 
 .main-title{
     position: absolute;
     display: inline-block;
-    margin-left: .2em;
-    top: .4em;
-    font-size: 8em;
+    margin-left: .5em;
+    top: .5em;
+    font-size: 5em;
 
 }
 
 .navegation{
     position: relative;
     left: 40em;
-    top:6em ;
+    top:2em ;
 }
 
 .navegation ul{
@@ -104,81 +104,37 @@ nav, ul{
     display: inline-block;
     margin-left: 2em;
 }
-/* Estilos para el cuerpo */
 
 .article{
     background:  #454aa6;
     margin: .7em 0 ;
-    
     width: 115.5em;
-    height: 41em;
+    height: 46.5em;
 
 
 }
 
-.create-task{
-    display: inline-block;
-    margin: 2em;
-}
+/* ESTILOS PARA TASK HTML */
+/* IMPORTANTE */
 
-.create-task a{
-    font-size: 1.3em;
-}
-
-.subtitle{
-    display:block;  
-    text-align: center;
-    font-size: 2em;
-}
-
-.article div{
-    color: black;
-    display: inline-block;
-    width: fit-content;
-    background: white;
-    margin-top: 4em;
-   margin-left: 10em;
-    width: 25em;
-    height: 25em;
-    padding: 4em;
-    overflow: hidden;
-}
-
-.task-one h3, .task-two h3, .task-three h3{
-    display: block;
+.section-task{
     position: relative;
-    top: auto;
-    text-align: center;
-   height: 13em;
-    overflow:hidden ;
-} 
-
-
-.task-hover{
-    background: black;
-    opacity: 0;
-    position: relative;
-    top: -23.2em;
-    left: -14em;
-    text-align: center;
-    
+    top: 2em;
+    left: 28em;
+    background:#585dc2 ;
+    width: 60em;
+    height: 43em;
+    border-radius: 2em;
+    align-items: center;
 }
 
-.task-hover:hover{
-    opacity: 1;
- background: rgba(58, 56, 56, 0.842);
- 
+.form-task{
+    border: 2px solid black;
 }
-
-.article button{
-    margin-top:3.2em ;
-    background: none;   
-    color:white ; 
-    font-size: 200%;
-    font-family: Bookman Old Style;
-    font-style: italic;
-    border: 0;
-    
+.input-name{
+ background-color: white ;   
+ outline: 0;
+ border: 0;
+ width: 30em;
+ height: 5em;
 }
-
-
